<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <group android:id="@+id/group_1">

        <item
            android:id="@+id/sign_up"
            android:icon="@drawable/school"
            android:title="@string/sign_up" />

    </group>

    <group>

        <item
            android:id="@+id/log_in"
            android:icon="@drawable/log_in"
            android:title="@string/log_in" />

        <item android:id="@+id/log_out"
            android:icon="@drawable/log_out"
            android:title="@string/log_out" />

    </group>

    <group android:id="@+id/group_2">

        <item
            android:id="@+id/share"
            android:icon="@drawable/share"
            android:title="@string/share" />

        <item
            android:id="@+id/github"
            android:icon="@drawable/github"
            android:title="@string/github" />

    </group>

</menu>